--- a/calc/templates/calc/calculator.html
+++ b/calc/templates/calc/calculator.html
@@ -44,5 +44,16 @@
       <div class="error"><strong>{{ error }}</strong></div>
     {% endif %}
   </div>
+  {% if history %}
+  <div class="result" style="margin-top:20px;">
+    <h3>History (last {{ history|length }}):</h3>
+    <ul>
+      {% for entry in history %}
+        <li>{{ entry }}</li>
+      {% endfor %}
+    </ul>
+  </div>
+{% endif %}
+
 </body>
 </html>
