html with scientific functions

--- a/calc/templates/calc/calculator.html
+++ b/calc/templates/calc/calculator.html
@@ -31,6 +31,9 @@
         <option value="-">-</option>
         <option value="*">×</option>
         <option value="/">÷</option>
+        <option value="sqrt">√ (square root)</option>
+        <option value="pow">x^y (power)</option>
+        <option value="log">log (base)</option>
       </select>
 
       <button type="submit">Calculate</button>
