--- a/calc/templates/calc/calculator.html
+++ b/calc/templates/calc/calculator.html
@@ -34,6 +34,9 @@
         <option value="sqrt">√ (square root)</option>
         <option value="pow">x^y (power)</option>
         <option value="log">log (base)</option>
+        <option value="sin">sin(x)</option>
+        <option value="cos">cos(x)</option>
+        <option value="tan">tan(x)</option>
       </select>
 
       <button type="submit">Calculate</button>
